[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Oghenemarho Orukele <orukele.dev@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = "0.1.36"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.5"
serde-aux = "4.2.0"
unicode-segmentation = "1"
validator = "0.16.0"
reqwest = { version = "0.11",default-features = false, features = ["json", "rustls-tls"] }
tracing-bunyan-formatter = "0.3"

[dev-dependencies]
once_cell = "1"
claim = "0.5"
fake = "2.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.19"
serde_json = "1"
linkify = "0.8"